dia 10, permisos comments y likes

--- a/avanzatech_blog/pytest.ini
+++ b/avanzatech_blog/pytest.ini
@@ -2,5 +2,12 @@
 DJANGO_SETTINGS_MODULE = avanzatech_blog.settings
 python_files = test.py tests.py test_*.py *_tests.py
 
-; markers = 
-;     slow: slow running test
+markers = 
+    user: test user models and views
+    post_view: test models and post views
+    like_view: test like models and views
+    comment_view: test comment models and views
+    post_viewset: test models and post views
+    like_viewset: test comment models and views
+    comment_viewset: test comment models and views
+    permissions: test model, views & permissions integration
