dia 12,test permissions

--- a/avanzatech_blog/pytest.ini
+++ b/avanzatech_blog/pytest.ini
@@ -10,4 +10,7 @@ markers =
     post_viewset: test models and post views
     like_viewset: test comment models and views
     comment_viewset: test comment models and views
-    permissions: test model, views & permissions integration
+    permissions_anon: test model, views & permissions integration for anonymous user
+    permissions_auth: test model, views & permissions integration for authenticated user
+    permissions_team: test model, views & permissions integration for team user
+    permissions_priv: test model, views & permissions integration for priv user 
